fixed French txt in product page too big

--- a/V3/FR/css/product.css
+++ b/V3/FR/css/product.css
@@ -280,6 +280,7 @@ BETTER
 }
 
 #better h1 span {
+	font-size: 35px;
 	display: block;
 }
 
